prevent horizontal scrolling in IOS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,3 +58,8 @@
     display: none;
   }
 }
+
+@utility scroll-touch {
+  -webkit-overflow-scrolling: touch;
+  touch-action: pan-y;
+}
